--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,8 +2,9 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li><%= link_to "#{task.title}", "/tasks/#{task.id}" %></li>
+    <li><%= link_to "#{task.title}", task_path(task) %>
+    <%= link_to 'Delete', task_path(task), method: :delete, data: { confirm: "Are you sure?" }%></li>
   <% end %>
 </ul>
 
-<%= link_to 'Create new Task', '/tasks/new'%>
+<%= link_to 'Create new Task', new_task_path %>
