--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,4 +3,5 @@
 <p><%= @task.details %></p>
 <p><%= @task.completed %></p>
 
+<%= link_to 'Edit Task', edit_task_path %>
 <%= link_to 'Back to List', root_path %>
